# tree-sitter-sam

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  recompile_playground.sh  setup.py  tree-sitter.json  watchmode-test.sh
bindings/c/: tree-sitter-sam.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sam/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSam/: sam.h
bindings/swift/TreeSitterSamTests/: TreeSitterSamTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: assignments.txt  combinators.txt  control_flow.txt  expressions.txt  ffi.txt
