[package]
name = "tree-sitter-sam"
description = "A scripting language focused on function and language composition."
version = "0.1.0"
authors = ["Legolas Tyrael Lada <legolaslada@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sam"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/44mira/tree-sitter-sam"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
